# socklib

./: .gitignore  CMakeLists.txt  CMakeSettings.json  NetComponents.sln  SockSample.sln  main_client.cpp
SockSample/: BytesData.cpp  BytesData.h  SockSample.cpp  SockSample.vcxproj  SockSample.vcxproj.filters  Socket.cpp  Socket.h  Socket_linux.cpp  Socket_win.cpp  stdafx.cpp
Socket_Unittests/: Socket_Unittests.cpp  Socket_Unittests.vcxproj
